--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: word_list_development
+  database: jp_study_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: word_list
+  #username: jp_study
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: word_list_test
+  database: jp_study_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: word_list_production
-  username: word_list
-  password: <%= ENV["WORD_LIST_DATABASE_PASSWORD"] %>
+  database: jp_study_production
+  username: jp_study
+  password: <%= ENV["JP_STUDY_DATABASE_PASSWORD"] %>
