--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch(ENV["CABLE_REDIS_URL"]) { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch(ENV.fetch("CABLE_REDIS_URL", "")) { "redis://localhost:6379/1" } %>
   channel_prefix: jpstudy_production
