--- a/test/fixtures/words.yml
+++ b/test/fixtures/words.yml
@@ -1,11 +1,188 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# https://www.honeybadger.io/blog/how-to-dump-a-rails-model-to-a-yaml-file/
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+形容詞:
+  japanese: 形容詞
+  english: adjective
+  source_name: FF 625
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("10/01/2021", "%m/%d/%y") %>
+
+よく寝た:
+  japanese: よく寝た
+  english: I slept well
+  source_name: NSM N5
+  source_reference: "5-2"
+  cards_created: false
+  user: carl
+  added_to_list_at: <%= Date.strptime("10/02/2021", "%m/%d/%y") %>
+
+教える:
+  japanese: 教える
+  english: to tell, to show
+  source_name: MNN
+  source_reference: "14"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("10/03/2021", "%m/%d/%y") %>
+
+プラットホーム:
+  japanese: プラットホーム
+  english: platform
+  source_name: MNN
+  source_reference: "14"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("10/04/2021", "%m/%d/%y") %>
+
+婚約する:
+  japanese: 婚約する
+  english: engage
+  source_name: FF 625
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("10/05/2021", "%m/%d/%y") %>
+
+大切に使っています:
+  japanese: 大切に使っています
+  english: I use it carefully
+  source_name: NSM N5
+  source_reference: "5-3"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("10/06/2021", "%m/%d/%y") %>
+
+できて:
+  japanese: できて
+  english: to be built
+  source_name: NSM N5
+  source_reference: "5-3"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+如何言いますか:
+  japanese: 如何言いますか
+  english: how do you say
+  source_name: NSM N5
+  source_reference: "5-3"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+短くしたかった:
+  japanese: 短くしたかった
+  english: I wanted to shorten it
+  source_name: NSM N5
+  source_reference: "5-3"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+さっき:
+  japanese: さっき
+  english: a short while ago, just now
+  source_name: NSM N5
+  source_reference: "5-2"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+この頃:
+  japanese: この頃
+  english: these days
+  source_name: NSM N5
+  source_reference: "4-7"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+切れる:
+  japanese: 切れる
+  english: to cut, to break
+  source_name: NSM N5
+  source_reference: "4-7"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+体にいい:
+  japanese: 体にいい
+  english: good for ones health
+  source_name: MNN
+  source_reference: "19"
+  cards_created: false
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+無理:
+  japanese: 無理
+  english: excessive, impossible
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+然し:
+  japanese: 然し
+  english: but, however
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+何回も:
+  japanese: 何回も
+  english: many times, time and again
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+ダイエット:
+  japanese: ダイエット
+  english: diet
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+実は:
+  japanese: 実は
+  english: actually, to tell you the truth...
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+お陰様で:
+  japanese: お陰様で
+  english: thank you (for your help)
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+段々:
+  japanese: 段々
+  english: gradually
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
+
+調子が悪い:
+  japanese: 調子が悪い
+  english: in bad condition
+  source_name: MNN
+  source_reference: "19"
+  cards_created: true
+  user: carl
+  added_to_list_at: <%= Date.strptime("11/13/2021", "%m/%d/%y") %>
