--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
         RAILS_ENV: test
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
+        PRIMARY_KEY: ${{ secrets.PRIMARY_KEY }}
+        DETERMINISTIC_KEY: ${{ secrets.DETERMINISTIC_KEY }}
+        KEY_DERIVATION_SALT: ${{ secrets.KEY_DERIVATION_SALT }}
     - name: Run tests
       run: bundle exec rails test # start with just running the unit tests
       env:
