--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,12 @@ jobs:
       run: bundle exec rails db:create db:migrate
     - name: Run unit tests
       run: bundle exec rails test
-    - name: Set up chromedriver
+    - name: Install ChromeDriver
       uses: nanasess/setup-chromedriver@master
-      with:
-        # Optional: do not specify to match Chrome's version
-        chromedriver-version: '88.0.4324.96'
+    - name: Start ChromeDriver
       run: |
         export DISPLAY=:99
         chromedriver --url-base=/wd/hub &
-        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
     - name: Run system tests
       run: bundle exec rails test:system
