--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,9 @@ development:
 test:
   <<: *default
   database: jpstudy_test
+  host: localhost
+  username: <%= ENV.fetch("POSTGRES_USER", ENV["USER"]) %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD", nil) %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
