--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - name: Install cURL
+      run: sudo apt-get install libcurl3-dev
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
