--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,12 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - name: Install cURL
+      run: sudo apt-get install libcurl3-dev
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.0.3'
+        ruby-version: '3.1.0'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Install dependent libraries for postgres
       run: sudo apt-get install libpq-dev
