--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -30,7 +30,6 @@ jobs:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       MAX_USERS: 4
-
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
@@ -45,10 +44,11 @@ jobs:
       run: sudo apt-get install libpq-dev
     - name: Setup Database
       run: bundle exec rails db:create db:migrate
-    - name: Run unit tests
-      run: bundle exec rails test
-
-    # === Everything below here is for the system tests ===
+  
+  system-tests:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
     - name: Install missing fonts # required for showing Knanji characters during system tests
       run: sudo apt-get install fonts-ipafont-mincho fonts-ipafont-gothic
     - name: Install ChromeDriver
@@ -60,10 +60,18 @@ jobs:
         sudo Xvfb -ac :99 -screen 0 1000x1000x24 > /dev/null 2>&1 &
     - name: Run system tests
       run: bundle exec rails test:system
-      continue-on-error: true # so it begins...
+      continue-on-error: true
     - name: Save failed test screenshots
       if: always()
       uses: actions/upload-artifact@v2
       with:
         name: test-screenshots
         path: /home/runner/work/jpstudy/jpstudy/tmp/screenshots/*.png
+        
+  unit-tests:
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Run unit tests
+      run: bundle exec rails test
