Add missing key in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       DETERMINISTIC_KEY: ${{ secrets.DETERMINISTIC_KEY }}
       KEY_DERIVATION_SALT: ${{ secrets.KEY_DERIVATION_SALT }}
       SQUARE_ACCESS_TOKEN: ${{ secrets.SQUARE_ACCESS_TOKEN }}
+      SQUARE_WEBHOOK_SIGNATURE_KEY: ${{ secrets.SQUARE_WEBHOOK_SIGNATURE_KEY }}
       MESSAGE_ENCRYPTION_KEY: ${{ secrets.MESSAGE_ENCRYPTION_KEY }}
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -78,6 +79,7 @@ jobs:
       DETERMINISTIC_KEY: ${{ secrets.DETERMINISTIC_KEY }}
       KEY_DERIVATION_SALT: ${{ secrets.KEY_DERIVATION_SALT }}
       SQUARE_ACCESS_TOKEN: ${{ secrets.SQUARE_ACCESS_TOKEN }}
+      SQUARE_WEBHOOK_SIGNATURE_KEY: ${{ secrets.SQUARE_WEBHOOK_SIGNATURE_KEY }}
       MESSAGE_ENCRYPTION_KEY: ${{ secrets.MESSAGE_ENCRYPTION_KEY }}
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
