--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Run system tests
       uses: nick-invision/retry@v2
       with:
-        timeout_seconds: 15
+        timeout_minutes: 5
         max_attempts: 3
         retry_on: error
         command: bundle exec rails test:system
