Add authorization tests for scoped resources

--- a/test/fixtures/kanji.yml
+++ b/test/fixtures/kanji.yml
@@ -1,3 +1,13 @@
+自:
+  character: 自
+  status: added
+  user: elemouse
+
+室:
+  character: 室
+  status: added
+  user: daisy
+
 形:
   character: 形
   status: added
